# pytorch-text-classification

./: .gitignore  CLAUDE.md  README.md  models.md  pyproject.toml
data/: loan_default_dataset.json
spec/: spec.md
src/: config.py  main.py  predict.py
src/data_preprocessing/: dataset.py  scrape.py
src/evaluation/: evaluate.py
src/logging/: logging.py
src/training/: device.py  model.py  train.py
tests/: test_dataset.py  test_model.py
